--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,11 @@
             <artifactId>groovy-all</artifactId>
             <version>2.4.7</version>
         </dependency>
-        <dependency>
-            <groupId>org.codehaus.groovy.modules.http-builder</groupId>
-            <artifactId>http-builder</artifactId>
-            <version>0.6</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.codehaus.groovy.modules.http-builder</groupId>-->
+            <!--<artifactId>http-builder</artifactId>-->
+            <!--<version>0.6</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
